# rsock

./: .gitignore  .travis.yml  CMakeLists.txt  CRawConn.cpp  CRawConn.h  ClientConn.cpp  ClientConn.h  ClientGroupConn.cpp  ClientGroupConn.h  ConnInfo.cpp  EncHead.cpp  EncHead.h  GroupConn.cpp  GroupConn.h  ICloseable.cpp  ICloseable.h  IConn.cpp  IConn.h  IGroupConn.cpp  IGroupConn.h  INetReset.h  IRawConn.cpp  IRawConn.h  ISockApp.cpp  ISockApp.h  ITcpInformer.cpp  ITcpObserver.h  IUnit.cpp  IUnit.h  OHead.cpp  OHead.h  PortMapper.cpp  PortMapper.h  RConfig.cpp  RConfig.h  RConnReset.cpp  RConnReset.h  README.md  SConn.cpp  SConn.h  (+26 more)
bean/: ConnInfo.cpp  ConnInfo.h  EncHead.cpp  EncHead.h  RConfig.cpp  RConfig.h  TcpInfo.cpp  TcpInfo.h
callbacks/: ConnReset.cpp  ConnReset.h  INetConnKeepAlive.h  IReset.h  ITcpInformer.cpp  ITcpInformer.h  ITcpObserver.h  KeepAliveRouteObserver.cpp  KeepAliveRouteObserver.h  NetConnKeepAlive.cpp  NetConnKeepAlive.h  NetConnKeepAliveHelper.cpp  NetConnKeepAliveHelper.h  RConnReset.cpp  RConnReset.h  ResetHelper.cpp  ResetHelper.h
cap/: CapUtil.cpp  CapUtil.h  ICap.cpp  ICap.h  RCap.cpp  RCap.h  cap_headers.h  cap_util.cpp  cap_util.h
client/: CConn.cpp  CConn.h  CConnErrHandler.cpp  CConnErrHandler.h  CNetGroup.cpp  CNetGroup.h  CRawConn.cpp  CRawConn.h  CSockApp.cpp  CSockApp.h  ClientConn.cpp  ClientConn.h  ClientGroup.cpp  ClientGroup.h  ClientNetManager.cpp  ClientNetManager.h  ClientNetObserver.cpp  ClientNetObserver.h  RClient.cpp  RClient.h  csock.cpp  csock.h  main.cpp
conn/: BtmUdpConn.cpp  BtmUdpConn.h  CConn.cpp  CConn.h  ConnInfo.cpp  ConnInfo.h  DefaultFakeConn.cpp  DefaultFakeConn.h  FakeTcp.cpp  FakeTcp.h  FakeUdp.cpp  FakeUdp.h  IAppGroup.cpp  IAppGroup.h  IBtmConn.cpp  IBtmConn.h  IConn.cpp  IConn.h  IGroup.cpp  IGroup.h  INetConn.cpp  INetConn.h  INetConnErrorHandler.h  INetGroup.cpp  INetGroup.h  RConn.cpp  RConn.h  RawTcp.cpp  RawTcp.h  RstHelper.cpp  RstHelper.h  TcpInfo.cpp  TcpInfo.h
doc/: README.zh-cn.md
include/: args.hxx  rscomm.h  rstype.h
include/plog/: Init.h  Log.h  Util.h
lib/: ConnReset.cpp  INetConnKeepAlive.h  IReset.h  ITcpInformer.cpp  NetConnKeepAlive.cpp  RConnReset.cpp  RConnReset.h
net/: ClientNetManager.cpp  ClientNetManager.h  INetManager.cpp  INetManager.h  NetListenPool.cpp  NetListenPool.h  NetManager.cpp  NetManager.h  NetManagerTimer.cpp  NetManagerTimer.h  NetUtil.cpp  NetUtil.h  ServerNetManager.cpp  ServerNetManager.h  TcpAckMon.cpp  TcpAckMon.h  TcpAckPool.cpp  TcpAckPool.h  TcpListenPool.cpp  TcpListenPool.h
server/: SConn.cpp  SConn.h  SNetGroup.cpp  SNetGroup.h  SRawConn.cpp  SRawConn.h  SSockApp.cpp  SSockApp.h  ServerGroup.cpp  ServerGroup.h  ServerGroupConn.cpp  ServerGroupConn.h  ServerNetManager.cpp  ServerNetManager.h  SubGroup.cpp  SubGroup.h  main.cpp  ssock.cpp  ssock.h
src/: ISockApp.cpp  ISockApp.h
src/app/: AppNetObserver.cpp  AppNetObserver.h  AppTimer.cpp  AppTimer.h
src/conf/: ConfManager.cpp  ConfManager.h
src/os/common/: FdUtil_common.cpp
src/os/include/: ProcUtil.h  os.h  os_unix.h  os_util.h  os_win.h
src/os/unix/: FdUtil.cpp  ProcUtil.cpp  os_util.cpp
src/os/unix/conn/: UnixDgramSyncConn.cpp  UnixDgramSyncConn.h
src/os/win/: FdUtil.cpp  ProcUtil.cpp  os_util.cpp
src/service/: IBaseService.h  INetObserver.h  IObserver.h  IRouteObserver.h  IService.cpp  IService.h  ITimerObserver.h  NetService.cpp  NetService.h  RouteService.cpp  RouteService.h  ServiceManager.cpp  ServiceManager.h  ServiceUtil.cpp  ServiceUtil.h  TimerService.cpp  TimerService.h  TimerServiceUtil.cpp  TimerServiceUtil.h
src/singletons/: ConfManager.cpp  ConfManager.h  RouteManager.cpp  RouteManager.h  ServiceManager.cpp  ServiceManager.h  Singleton.cpp  Singleton.h
src/sync/: IPacketSyncConn.cpp  IPacketSyncConn.h  ISyncConn.cpp  ISyncConn.h  LoopSreamSyncConn.cpp  LoopSreamSyncConn.h  LoopStreamSyncConn.cpp  LoopStreamSyncConn.h  SyncConnFactory.cpp  SyncConnFactory.h  TcpStreamSyncConn.cpp  TcpStreamSyncConn.h  UdpSyncConn.cpp  UdpSyncConn.h
src/util/: HandlerUtil.cpp  HandlerUtil.h  ICloseable.h  KeyGenerator.cpp  KeyGenerator.h  RouteUtil.cpp  RouteUtil.h  Singleton.cpp  Singleton.h  TcpCmpFn.cpp  TcpCmpFn.h  TcpUtil.cpp  TcpUtil.h
tcp/: LSockMon.cpp  LSockMon.h  SockMon.cpp  SockMon.h  TcpConnector.cpp  TcpConnector.h
test/: test_cap.cpp  test_client.cpp  test_conf.cpp  test_server.cpp  test_udp_echo.h  udp_echo_client.cpp  udp_echo_server.cpp
util/: FdUtil.cpp  FdUtil.h  Handler.cpp  Handler.h  PortPair.cpp  PortPair.h  ProcUtil.cpp  ProcUtil.h  RPortList.cpp  RPortList.h  RTimer.cpp  RTimer.h  RouteUtil.cpp  RouteUtil.h  ShotHandler.cpp  ShotHandler.h  TextUtils.cpp  TextUtils.h  UvUtil.cpp  UvUtil.h  enc.c  enc.h  rhash.cpp  rhash.h  rsutil.c  rsutil.cpp  rsutil.h
xbuild/cmake/: Darwin_x86_64.toolchain.cmake  Linux_x86_64.toolchain.cmake  Linux_x86_64.universe_toolchain.cmake  Windows_x86.toolchain.cmake  base.cmake  test_darwin.cmake  travis_Darwin_x86_64.cmake  travis_Linux_x86_64.cmake
xbuild/include/libdnet/dnet/: os.h
xbuild/include/libdnet_win/: dnet.h
xbuild/include/libdnet_win/dnet/: macros.h
xbuild/include/libnet/: libnet.h  libnet_posix.h  libnet_win.h
xbuild/include/libnet/libnet/: stdint.h
xbuild/include/winpcap/: pcap-stdinc.h
xbuild/lib/Windows_x86/: dnet.lib  net.lib  uv.lib
xbuild/sh/: base_func.sh  travis_install.sh
